@@ -8,6 +8,8 @@ date Version 3.00.44 (Beta 3)
   Connect() is now the default implementation of event handling.
   See the "event_generation" property of the Project object.
 * Fixed FS#178 - "crash using toolbar"
++ Added CustomControl - This allows the user to generate arbitrary code for a 
+  control which is not yet fully supported by wxFormBuilder.
 
 05-29-2007 Version 3.00.43 (Beta 3)
 ^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
